--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "obsidian-git-mobile",
-  "name": "Obsidian Git Mobile",
+  "id": "obsidian-git-isomorphic",
+  "name": "Obsidian Git isomorphic",
   "description": "Backup your vault with git.",
   "isDesktopOnly": false,
   "js": "main.js",
-  "version": "2.0.0"
+  "version": "1.0.0"
 }
