--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         rm src/simpleGit.ts
         mv ../simpleGit.ts src/simpleGit.ts
         npm install
-        npm run buildbrowser --if-present
+        npm run build --if-present
     # Package the required files into a zip
     - name: Package
       run: |
